Fix Visual Studio warning on single file compilation

BUG=615402

Review-Url: https://codereview.chromium.org/2018733003
Cr-Commit-Position: refs/heads/master@{#396693}

Former-commit-id: a7e95b0468908825cdafa072ed1b8f99f3859a93